frontend/src/components/Post/post.css
.post {
	font-family: Arial, Helvetica, sans-serif;
	width: 95%;
	-webkit-box-shadow: 5px 5px 13px 5px rgba(0, 0, 0, 0.14);
	box-shadow: 5px 5px 13px 5px rgba(0, 0, 0, 0.14);
	margin: 18px 10px;
	border-radius: 10px;
}

.post a {
	text-decoration: none;
	color: #3b579d;
}

.post a span {
	font-weight: 800;
}

.postContainer {
	padding: 2px 10px;
}

.postImage {
	width: 40px;
	height: 40px;
	margin-left: 2px;
	border-radius: 50%;
	object-fit: cover;
}
.postTop {
	display: flex;
	align-items: center;
	padding-top: 10px;
	margin-top: 10px;
	margin-left: 10px;
}

.postTopLeft {
	display: flex;
	align-items: center;
	margin-top: 10px;
}
.postUserName {
	font-size: 15px;
	font-weight: 500;
	margin: 0 10px;
}
.postTime {
	font-size: 10px;
}

.postCenter {
	margin-left: 20px 0;
}

.postCaption {
	margin: 16px 8px;
}

.postedImage {
	max-width: 100%;
	max-height: 86vh;
	object-fit: contain;
	border-radius: 8px;
}

.reactionPic {
	width: 23px;
	height: 23px;
	margin-left: 1px;
	cursor: pointer;
}
.postBottom {
	display: flex;
	width: 98%;
	align-items: center;
	margin-left: 5px;
	justify-content: space-between;
}
.postBottomLeft {
	display: flex;
	align-items: center;
}
.likeCount {
	margin-left: 5px;
	font-size: 15px;
}
.commentCount {
	margin-right: 10px;
	cursor: pointer;
	text-decoration: 1px underline;
}

.imageModal {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.8);
	display: flex;
	align-items: center;
	justify-content: center;
	z-index: 1000;
}

.fullScreenImage {
	max-width: 90%;
	max-height: 90%;
}

